--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   "license": "ISC",
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "@material-ui/core": "^4.11.2"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@material-ui/core": "^4.12.3",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
     "copy-webpack-plugin": "^10.2.0",
+    "eslint": "^8.9.0",
+    "eslint-plugin-react": "^7.28.0",
     "html-webpack-plugin": "^5.5.0",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.4",
